clang/test/BSC/Negative/Trait/GenericTrait/first_param_not_this/first_param_not_this.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {
  T foo(T a); // expected-error {{the first parameter of trait member function must be 'This* this'}}
};